@@ -6,11 +6,6 @@ If you want to hack on pycurl, here's our list of unresolved issues:
 
 NEW FEATURES/IMPROVEMENTS:
 
-    * Add new 3rdparty ftp transfer options from libcurl.
-
-    * HTTPPOST should take a dict instead of a list of tuples, this way it
-      would have the same interface as POSTFIELDS.
-
     * Support more of the CURLFORM_* API in HTTPPOST?
 
     * Add docs to the high-level interface.
